tests/snapshots/binds__insta_bind_set_query_fields.snap
---
source: tests/binds.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c.3                                                                           "
"  b.2                                                                           "
"> a.1                                                                           "
"  3/3                                                                        0/0"
">                                                                               "
